Add support for running in subfolder

--- a/.env-sample
+++ b/.env-sample
@@ -3,4 +3,5 @@ MONGO_URL=mongodb://localhost:27017/treasure-hunt
 AUTH_SECRET=hell0-th3rE
 
 APP_PORT=3000
+APP_SUBFOLDER=/api
 REMOTE_ORIGIN=http://localhost:8080
