WIP: Convert to TS, automatize app composition

--- a/.env-sample
+++ b/.env-sample
@@ -1,5 +1,6 @@
 MONGO_URL=mongodb://localhost:27017/treasure-hunt
 
+# TENANT_NAME=sotw # for tenant specific functionality such as static data, ...
 AUTH_SECRET=hell0-th3rE
 
 APP_PORT=3000
