--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@com-pot/treasure-hunt",
   "version": "1.0.0",
   "description": "",
-  "type": "commonjs",
   "scripts": {
     "start": "nodemon",
-    "test": "mocha -r ts-node/register -r esm -r test/boot.js",
-    "test-all": "npm run test 'src/**/*.spec.@(js|ts)'",
-    "e2e": "mocha -r ts-node/register -r esm -r dotenv/config -r test/boot.js dotenv_config_path=./e2e.env",
-    "e2e-all": "npm run e2e test/e2e/**/*.spec.js"
+    "test": "mocha -r ts-node/register",
+    "test-all": "npm run test 'src/**/*.spec.ts'",
+    "e2e": "mocha -r ts-node/register -r test/e2e.boot.mjs",
+    "e2e-all": "npm run e2e 'test/e2e/**/*.spec.mjs'",
+    "lint": "eslint . --ext .ts"
   },
   "author": "Thoronir42@Gmail.com",
   "license": "ISC",
@@ -24,6 +24,7 @@
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.21",
     "mongodb": "^4.1.2",
+    "node-fetch": "^3.1.0",
     "tsconfig-paths": "^3.11.0"
   },
   "devDependencies": {
@@ -32,14 +33,20 @@
     "@types/glob": "^7.1.4",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.3",
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.8",
-    "@types/koa-bodyparser": "^4.3.3",
     "@types/lodash": "^4.14.175",
     "@types/mocha": "^9.0.0",
+    "@types/mongodb": "^4.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.2.0",
     "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
+    "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
