Update treasure-hunt structure for season 2
Applying this update will:
- Introduce typeful-executive module with Actions and Conditions

--- a/.env-sample
+++ b/.env-sample
@@ -3,6 +3,9 @@ MONGO_URL=mongodb://localhost:27017/treasure-hunt
 TENANT_NAME=vlm # for tenant specific functionality such as static data, ...
 AUTH_SECRET=hell0-th3rE
 
+#BACKSTAGE_DEV_AUTH=420
+#DEBUG_ALLOW_TIME_TRAVEL=true
+
 APP_PORT=3000
 APP_SUBFOLDER=/api
 REMOTE_ORIGIN=http://localhost:8080
