--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "parser": "@typescript-eslint/parser",
   "env": {
     "node": true,
-    "mocha": true
+    "vitest": true
   },
   "plugins": [
     "@typescript-eslint"
