--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "glob": "^7.1.7",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "lodash": "^4.17.21",
@@ -29,25 +29,21 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/chai": "^4.2.22",
     "@types/glob": "^7.1.4",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/koa": "^2.13.4",
-    "@types/koa-bodyparser": "^4.3.3",
     "@types/koa__cors": "^3.0.3",
     "@types/koa__router": "^8.0.8",
+    "@types/koa-bodyparser": "^4.3.3",
     "@types/lodash": "^4.14.175",
-    "@types/mocha": "^9.0.0",
     "@types/mongodb": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
-    "chai": "^4.3.4",
     "cross-env": "^7.0.3",
     "eslint": "^8.2.0",
-    "mocha": "^9.1.1",
     "nodemon": "^2.0.12",
-    "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vitest": "^0.30.1"
   }
 }
