--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "scripts": {
     "start": "nodemon",
-    "test": "mocha -r ts-node/register",
-    "test-all": "npm run test 'src/**/*.spec.ts'",
+    "test": "vitest",
     "e2e": "mocha -r ts-node/register -r test/e2e.boot.mjs",
     "e2e-all": "npm run e2e 'test/e2e/**/*.spec.mjs'",
     "lint": "eslint . --ext .ts"
@@ -25,6 +24,8 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.1.2",
     "node-fetch": "^3.1.0",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.0.1",
     "tsconfig-paths": "^3.11.0"
   },
   "devDependencies": {
